# survicraft

./: CHANGELOG.md  Cargo.toml  README.md  flake.nix  index.html
.cargo/: config.toml
assets/shaders/: tile_chunk.wgsl
crates/survicraft-assets/: Cargo.toml
crates/survicraft-assets/src/: lib.rs  main_menu.rs  plugin.rs
crates/survicraft-client/: Cargo.toml
crates/survicraft-client/src/: chat.rs  controller.rs  lib.rs  network.rs  player.rs  terrain.rs
crates/survicraft-common/: Cargo.toml
crates/survicraft-common/src/: chat.rs  chunk_map.rs  debug.rs  lib.rs  main_menu.rs  player.rs  setup.rs
crates/survicraft-common/src/camera/: mod.rs  wasd_camera.rs
crates/survicraft-common/src/terrain/: collider.rs  components.rs  generation.rs  geometry.rs  mod.rs  planet.rs  render.rs  resources.rs
crates/survicraft-common/src/tilemap/: mod.rs  tilemap.rs
crates/survicraft-launcher/: Cargo.toml
crates/survicraft-launcher/src/: common.rs  lib.rs  main.rs  main_menu.rs
crates/survicraft-protocol/: Cargo.toml
crates/survicraft-protocol/src/: component.rs  input.rs  lib.rs  message.rs
crates/survicraft-render/: Cargo.toml
crates/survicraft-render/src/: lib.rs  main_menu.rs
crates/survicraft-server/: Cargo.toml
crates/survicraft-server/src/: chat.rs  lib.rs  network.rs  player.rs
examples/: README.md  character.rs  crafting.rs  network.rs  network_character.rs  terrain.rs
examples/helpers/: controller.rs  mod.rs  wasd.rs
src/: lib.rs  plugin.rs  protocol.rs
src/client/: chat.rs  controller.rs  mod.rs  network.rs  player.rs
src/common/: assets.rs  chat.rs  chunk_map.rs  controller.rs  debug.rs  features.rs  main_menu.rs  mod.rs  player.rs  plugin.rs  render.rs  server_plugin.rs  setup.rs  status.rs  terrain.rs  world.rs
src/common/camera/: head_camera.rs  wasd_camera.rs
src/common/character/: components.rs  constants.rs  kinematic.rs  mod.rs  physics.rs
src/common/controller/: creative.rs  mod.rs  network_physics.rs  physics.rs  wasd.rs
src/common/features/: components.rs  generation.rs  mod.rs  planet.rs  render.rs  resources.rs
src/common/inventory/: components.rs  mod.rs  plugin.rs  render.rs  resources.rs
src/common/lightyear_events/: mod.rs
src/common/player/: mod.rs  plugin.rs  render.rs
src/common/terrain/: collider.rs  components.rs  generation.rs  geometry.rs  mod.rs  planet.rs  render.rs  resources.rs
src/common/tilemap/: gridmap.rs  mod.rs  tilemap.rs
src/helpers/: chat.rs  chunk_map.rs  glue.rs  mod.rs  setup.rs
src/helpers/camera/: head_camera.rs  mod.rs
src/helpers/character/: physics.rs
src/helpers/player/: mod.rs  plugin.rs  render.rs
src/helpers/terrain/: collider.rs  components.rs  generation.rs  geometry.rs  mod.rs  planet.rs  render.rs  resources.rs
src/helpers/tilemap/: tilemap.rs
src/plugin/: assets.rs  controller.rs  inventory.rs  mod.rs  network.rs  progress.rs  protocol.rs  render.rs  resources.rs  setup.rs  states.rs  status.rs  ui.rs  world.rs
src/server/: chat.rs  mod.rs  network.rs  player.rs
