[workspace]
members = [
  "crates/survicraft-client",
  "crates/survicraft-server",
  "crates/survicraft-common",
  "crates/survicraft-protocol",
  "crates/survicraft-launcher",
  "crates/survicraft-render",
  "crates/survicraft-assets"
]
resolver = "2"

[workspace.dependencies]
bevy = {version = "0.16.1", features = [
  "serialize",
  "bevy_asset",
  "bevy_state",
  "bevy_pbr",
  "bevy_ui",
  "bevy_ui_picking_backend",
  "default_font",
  "tonemapping_luts",
  "animation",
  "bevy_animation",
  "bevy_gltf",
  "png",
  "bevy_window",
  "bevy_winit",
  "webgpu", # TODO: Disable this when not on WASM
  "x11",
  "bevy_gizmos",
], default-features = false}

bevy-inspector-egui = "0.33.1"
bevy_egui = { version = "0.36", default-features = false, features = [
  "open_url",
  "default_fonts",
  "render",
] }

bincode = "2.0.1"
serde = "1.0.219"
crossbeam-channel = "0.5.15"

lightyear = { version = "0.23.0", features = [
  "netcode",
  "leafwing",
  "avian3d",
  "udp"
]}

avian3d = {version = "0.3.1", features = [
  "3d",
  "f32",
  "parry-f32",
  "parallel",
  "serialize",
  "enhanced-determinism",
  "collider-from-mesh",
  "debug-plugin"
], default-features = false}

leafwing-input-manager = {version = "0.17.1", default-features = false, features = [
  "keyboard",
  "gamepad",
  "mouse",
]}

bevy_asset_loader = { version = "0.23.0", features = ["2d"] }
iyes_perf_ui = "0.5.0"

clap = { version = "4.5.47", features = ["derive"] }

rand = "0.9.2"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = "thin"

[profile.wasm-release]
inherits = "release"
opt-level = "s"
strip = "debuginfo"

[workspace.lints.rust]
# dead_code = "allow"
# unused_variables = "allow"
# unused_imports = "allow"

[workspace.lints.clippy]
type_complexity = "allow"
