[package]
name = "survicraft"
version = "0.1.0"
authors = ["jercan_alex27@yahoo.com"]
edition = "2021"
license = "MIT"
homepage = "https://github.com/alexjercan/survicraft"
description = "Simple Survival Multiplayer Game"
categories = ["games"]
exclude = ["dist", "build", "assets", "credits"]

[lib]
path = "src/lib.rs"

[[bin]]
name = "survicraft"
path = "src/bin/survicraft.rs"

[[bin]]
name = "survicraftd"
path = "src/bin/survicraftd.rs"

[dependencies]
bevy = {version = "0.16.1", features = [
  "serialize",
  "bevy_asset",
  "bevy_state",
  "bevy_pbr",
  "bevy_ui",
  "bevy_ui_picking_backend",
  "default_font",
  "tonemapping_luts",
  "animation",
  "bevy_animation",
  "bevy_gltf",
  "png",
  "bevy_window",
  "bevy_winit",
  "webgpu", # TODO: Disable this when not on WASM
  "x11",
  "bevy_gizmos",
], default-features = false}
bevy-inspector-egui = "0.33.1"
bevy_egui = { version = "0.36", default-features = false, features = [
  "open_url",
  "default_fonts",
  "render",
] }
bincode = "2.0.1"
serde = "1.0.219"
crossbeam-channel = "0.5.15"
lightyear = { version = "0.23.0", features = [
  "netcode",
  "leafwing",
  "avian3d",
  "udp"
]}
avian3d = {version = "0.3.1", features = [
  "3d",
  "f32",
  "parry-f32",
  "parallel",
  "serialize",
  "enhanced-determinism",
  "collider-from-mesh",
  "debug-plugin"
], default-features = false}
leafwing-input-manager = {version = "0.17.1", default-features = false, features = [
  "keyboard",
  "gamepad",
  "mouse",
]}
bevy_asset_loader = { version = "0.23.0", features = ["2d"] }
iyes_perf_ui = "0.5.0"
clap = { version = "4.5.47", features = ["derive"] }
rand = "0.9.2"
bevy_simple_text_input = { version = "0.11.0" }
itertools = "0.14.0"
noise = "0.9.0"
bevy_common_assets = { version = "0.13.0", features = ["ron"] }
anyhow = "1.0.99"
iyes_progress = "0.14.0"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

# This is used by trunk as it doesn't support custom profiles: https://github.com/trunk-rs/trunk/issues/605
# xbuild also uses this profile for building android AABs because I couldn't find a configuration for it
[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true

# Profile for distribution
[profile.dist]
inherits = "release"
opt-level = 3
lto = true
codegen-units = 1
strip = true

[workspace.lints.rust]
# dead_code = "allow"
# unused_variables = "allow"
# unused_imports = "allow"

[workspace.lints.clippy]
type_complexity = "allow"

[build-dependencies]
embed-resource = "1"

[features]
debug = []
dev = [
    "bevy/dynamic_linking", "debug"
]
