[package]
name = "survicraft-client"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy.workspace = true
avian3d.workspace = true
lightyear.workspace = true
bevy_simple_text_input.workspace = true
leafwing-input-manager.workspace = true
survicraft-protocol = { path = "../survicraft-protocol" }
survicraft-common = { path = "../survicraft-common" }

[lints]
workspace = true
