[package]
name = "survicraft-common"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy.workspace = true
noise.workspace = true
avian3d.workspace = true
itertools.workspace = true
iyes_perf_ui.workspace = true
bevy-inspector-egui.workspace = true
leafwing-input-manager.workspace = true
bevy_simple_text_input.workspace = true
survicraft-protocol = { path = "../survicraft-protocol" }

[lints]
workspace = true

[features]
debug = []
dev = [
    "bevy/dynamic_linking", "debug"
]
